# effective-parakeet

./: .travis.yml  CMakeLists.txt  NOTES.md  README.md  Readme.md  package.xml
cfg/: TripleHDR.cfg  ZividCamera.cfg
cmake/: CompilerLintingOptions.cmake  CompilerWarningOptions.cmake
continuous-integration/: build.sh  ci_test.sh  lint-cpp.sh  lint.sh  lint_cpp.sh  run_ci_test_in_docker.sh  setup.sh  test.sh
include/: parse_settings.hpp  zivid_camera.hpp  zivid_ros_wrapper_gen.hpp  zivid_services_generated.h
include/zivid_ros_wrapper/: zivid_ros_wrapper.hpp
launch/: hdr_param_tuner.launch  settings_tuner.launch  visualize.launch
rviz/: camera_view.rviz
scripts/: sample.py  sample_capture_in_loop.py
src/: settings_generator.cpp  zivid_camera.cpp  zivid_hdr_republisher.cpp  zivid_ros_wrapper_gen.cpp  zivid_ros_wrapper_node.cpp  zivid_service_republisher.cpp
src/zivid_ros_wrapper/: zivid_ros_wrapper.cpp
srv/: HDR.srv  ZividInfo.srv
test/: test_zivid_camera.cpp  test_zivid_ros_wrapper.cpp  test_zivid_ros_wrapper.test
zivid_camera/: CMakeLists.txt  nodelets.xml  package.xml
zivid_camera/cfg/: ZividCamera.cfg
zivid_camera/include/: parse_settings.hpp  zivid_camera.hpp
zivid_camera/launch/: configure.launch  demo.launch  visualize.launch  zivid_camera.launch
zivid_camera/rviz/: camera_view.rviz  camera_view2.rviz  hdr_view.rviz
zivid_camera/src/: main.cpp  node.cpp  nodelet.cpp  settings_generator.cpp  zivid_camera.cpp
zivid_camera/test/: test_zivid_camera.cpp  test_zivid_camera.test
zivid_samples/: CMakeLists.txt  package.xml
zivid_samples/launch/: sample_capture.launch
zivid_samples/scripts/: sample_capture.py  sample_capture_in_loop.py
zivid_samples/src/: sample_capture.cpp
